small alignment fix

--- a/sass/base/_portfolio.scss
+++ b/sass/base/_portfolio.scss
@@ -35,7 +35,7 @@
   // flex-direction: column;
   position: absolute;
   top: 357px;
-  left: 5px;
+  left: 0px;
   width: 100%;
   height: 100px;
   background-color: $shark;
